--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "near-marketplace",
-  "homepage": "https://xyzjesus.github.io/near-market/",
+  "homepage": "https://xyzjesus.github.io/near-market",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
